--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "svelte": "^4.2.3",
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "prettier": "^3.1.0"
   }
 }
