--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "devDependencies": {
+    "@iconify/svelte": "^3.1.4",
     "@picocss/pico": "^1.5.10",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "prettier": "^3.1.0",
+    "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.3",
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "iconify": "^1.4.0",
-    "prettier": "^3.1.0"
+    "iconify": "^1.4.0"
   }
 }
